Documentation edits made through Mintlify web editor

--- a/api-retry-policy.mdx
+++ b/api-retry-policy.mdx
@@ -11,7 +11,7 @@ As a user of the Voyado Engage API, you must always ensure that, after sending a
 
 If your response is late, it is more probable that Engage is under an unusually high load and responding slowly than your message was lost along the way. Messages can be lost, of course, but it is not the most likely scenario.
 
-According to the Voyado Engage [<u>integration principles</u>](https://developer.voyado.com/en/api/integration-principles.html), a contact should always be able to perform their entire purchase in the POS or e-com, regardless of problems such as the Engage API not responding. The internet is complex and many things can go wrong or be delayed. So if your flow is time-critical, you should be prepared to handle all likely interruptions on your end, and not be entirely dependent on ideal-case response times from Engage.
+According to the Voyado Engage [integration principles](https://developer.voyado.com/en/api/integration-principles.html), a contact should always be able to perform their entire purchase in the POS or e-com, regardless of problems such as the Engage API not responding. The internet is complex and many things can go wrong or be delayed. So if your flow is time-critical, you should be prepared to handle all likely interruptions on your end, and not be entirely dependent on ideal-case response times from Engage.
 
 ## **Timeouts**
 
