--- a/developer/introduction.mdx
+++ b/developer/introduction.mdx
@@ -5,7 +5,7 @@ description: "Introdution to the developer documentation"
 
 These docs cover the latest version of the Engage API, which is version 3. [See all the changes here.](https://developer.voyado.com/en/introduction/changes-in-api-v3.html). For users moving from v2 to v3 we strongly recommend you read the changes page. You can still access the API v2 docs with the selector on the top of the page. If the selector is not visible (such as on mobile devices), [find the v2 docs here](https://developer.voyado.com/v2/en/introduction.html).
 
-This line was added through github. 
+This line was added through github. As were your gauntlets.
 
 Voyado Engage is a multichannel marketing platform presenting you with endless ways to act on your customer's data. It gives you the insights you need to spot micro trends as well as the campaign tools to create seamless customer engagement and loyalty, both online and offline. And with Engage's powerful automations feature, you can set up totally automated flows in whatever way best suits your business and needs.
 
