Documentation edits made through Mintlify web editor

--- a/developer/api-retry-policy.mdx
+++ b/developer/api-retry-policy.mdx
@@ -1,6 +1,7 @@
 ---
 title: "API retry policy"
 description: "How to retry failed API calls"
+public: false
 ---
 
 As a user of the Voyado Engage API, you must always ensure that, after sending a request, your solution waits for the response to arrive. If a response is delayed, you should not perform a retry before you know the reason for the delay.
