Documentation edits made through Mintlify web editor

--- a/developer/introduction.mdx
+++ b/developer/introduction.mdx
@@ -3,7 +3,7 @@ title: "Introduction"
 description: "Introdution to the developer documentation"
 ---
 
-import MySnippet from 'snippets/test-snippet.mdx';
+import MySnippet from '/snippets/test-snippet.mdx';
 
 These docs cover the latest version of the Engage API, which is version 3. [See all the changes here.](https://developer.voyado.com/en/introduction/changes-in-api-v3.html). For users moving from v2 to v3 we strongly recommend you read the changes page. You can still access the API v2 docs with the selector on the top of the page. If the selector is not visible (such as on mobile devices), [find the v2 docs here](https://developer.voyado.com/v2/en/introduction.html).
 
