Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -9,7 +9,7 @@ These docs cover the latest version of the Engage API, which is version 3. [See 
 
 <testSnippet/>
 
-This line was added through github. As were your gauntlets.
+This line was added through github. As were those gauntlets.
 
 Voyado Engage is a multichannel marketing platform presenting you with endless ways to act on your customer's data. It gives you the insights you need to spot micro trends as well as the campaign tools to create seamless customer engagement and loyalty, both online and offline. And with Engage's powerful automations feature, you can set up totally automated flows in whatever way best suits your business and needs.
 
